syntax = "proto3";
package photon_gun;

// Types
message PingRequest {}
message PingResponse {}

message Healthcheck {
    string agentUuid = 1;
    bool pass = 2;
    string endpoint = 3;
    int64 startTime = 4;
    int64 elapsedTime = 5;
}

message Return {
    string msg = 1;
}

// Services
service PhotonGun {
    rpc Ping(PingRequest) returns (PingResponse) {}
    rpc CreateHealthcheck(Healthcheck) returns (Return) {}
}
